--- a/src/CommandAPI/appsettings.json
+++ b/src/CommandAPI/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MssqlConnection":"Server=localhost,1433; Initial Catalog=CmdApi; User ID=CmdDbUser; Password=dev@dba@4839;"
+  }
 }
